force-app/main/default/objects/Wallet__c/Wallet__c.object-meta.xml
<CustomObject>
    <label>Wallet</label>
    <nameField>
        <label>Wallet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wallets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>