force-app/main/default/objects/Wallet__c/fields/Account_Index__c.field-meta.xml
<CustomField>
    <fullName>Account_Index__c</fullName>
    <label>Account Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>