force-app/main/default/objects/Wallet__c/fields/Account_Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Private_Key__c</fullName>
    <label>Account Private Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>