force-app/main/default/objects/Wallet__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOA</fullName>
                <label>Externally Owned Account (EOA)</label>
            </value>
            <value>
                <fullName>SCA</fullName>
                <label>Smart Contract Account (SCA)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>