force-app/main/default/objects/Wallet__c/fields/Blockchain__c.field-meta.xml
<CustomField>
    <fullName>Blockchain__c</fullName>
    <label>Blockchain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARB</fullName>
            </value>
            <value>
                <fullName>ARB-SEPOLIA</fullName>
            </value>
            <value>
                <fullName>AVAX</fullName>
            </value>
            <value>
                <fullName>AVAX-FUJI</fullName>
            </value>
            <value>
                <fullName>ETH</fullName>
            </value>
            <value>
                <fullName>ETH-SEPOLIA</fullName>
            </value>
            <value>
                <fullName>EVM</fullName>
            </value>
            <value>
                <fullName>EVM-TESTNET</fullName>
            </value>
            <value>
                <fullName>MATIC</fullName>
            </value>
            <value>
                <fullName>MATIC-AMOY</fullName>
            </value>
            <value>
                <fullName>NEAR</fullName>
            </value>
            <value>
                <fullName>NEAR-TESTNET</fullName>
            </value>
            <value>
                <fullName>SOL</fullName>
            </value>
            <value>
                <fullName>SOL-DEVNET</fullName>
            </value>
            <value>
                <fullName>UNI-SEPOLIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>