force-app/main/default/objects/Wallet__c/fields/InitialPublicKey__c.field-meta.xml
<CustomField>
    <fullName>InitialPublicKey__c</fullName>
    <label>Initial Public Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>