force-app/main/default/objects/Wallet__c/fields/Stake_Address__c.field-meta.xml
<CustomField>
    <fullName>Stake_Address__c</fullName>
    <label>Stake Address</label>
    <type>Text</type>
    <length>120</length>
</CustomField> 