force-app/main/default/objects/Wallet__c/fields/Wallet_Set__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Set__c</fullName>
    <label>Wallet Set</label>
    <referenceTo>Wallet_Set__c</referenceTo>
    <relationshipLabel>Wallets</relationshipLabel>
    <relationshipName>Wallets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>