force-app/main/default/objects/Wallet__c/fields/WalletSet__c.field-meta.xml
<CustomField>
    <fullName>WalletSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wallet Set</label>
    <referenceTo>WalletSet__c</referenceTo>
    <relationshipLabel>Wallets</relationshipLabel>
    <relationshipName>Wallets</relationshipName>
    <type>Lookup</type>
</CustomField>