force-app/main/default/objects/Wallet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>    
    <columns>Address__c</columns>
    <columns>State__c</columns>    
    <columns>WalletSet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>